# langchain_cpp

./: BLOG_LEARNINGS_PHASE1.md  BM25_PRINCIPLES_AND_CHALLENGES.md  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DEVELOPMENT_SUMMARY.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README.md  cmake_install.cmake  debug_bm25_scores  debug_long_doc  debug_long_doc.cpp  debug_retriever  debug_retriever.cpp  debug_retriever2  debug_retriever2.cpp
docs/: PHASE5_IMPLEMENTATION_SUMMARY.md  PHASE6_TECHNICAL_DOCUMENTATION.md  Phase4_LLM_INTEGRATION.md  TECHNICAL_KNOWLEDGE_AND_PITFALLS.md  api_reference.md  architecture.md  performance_guide.md
examples/: CMakeLists.txt  Makefile  README.md  advanced_retrieval.cpp  basic_retrieval.cpp  chain_composition.cpp  cmake_install.cmake  llm_integration.cpp  memory_systems.cpp  performance_example.cpp  production_setup  production_setup.cpp  security_example.cpp
include/langchain/: langchain.hpp
include/langchain/agents/: agent.hpp
include/langchain/chains/: base_chain.hpp  llm_chain.hpp  sequential_chain.hpp
include/langchain/core/: base.hpp  config.hpp  types.hpp
include/langchain/distributed/: distributed_processing.hpp
include/langchain/llm/: base_llm.hpp  openai_llm.hpp
include/langchain/memory/: memory.hpp
include/langchain/metrics/: metrics.hpp
include/langchain/persistence/: persistence.hpp
include/langchain/prompts/: prompt_template.hpp
include/langchain/retrievers/: base_retriever.hpp  bm25_retriever.hpp  hybrid_retriever.hpp  inverted_index_retriever.hpp
include/langchain/security/: security.hpp
include/langchain/text/: text_processor.hpp
include/langchain/utils/: logging.hpp  memory_pool.hpp  memory_pool.hpp.backup  simd_ops.hpp  simple_json.hpp  thread_pool.hpp
include/langchain/vectorstores/: simple_vector_store.hpp  vector_store.hpp
src/agents/: agent.cpp
src/chains/: llm_chain.cpp  sequential_chain.cpp
src/core/: config.cpp  types.cpp
src/distributed/: distributed_processing.cpp
src/llm/: base_llm.cpp  openai_llm.cpp
src/memory/: memory.cpp
src/metrics/: metrics.cpp
src/persistence/: persistence.cpp
src/prompts/: prompt_template.cpp
src/retrievers/: bm25_retriever.cpp  hybrid_retriever.cpp  inverted_index_retriever.cpp
src/security/: security.cpp
src/text/: text_processor.cpp
src/utils/: logging.cpp  memory_pool.cpp  simd_ops.cpp  thread_pool.cpp
src/vectorstores/: simple_vector_store.cpp  vector_store.cpp
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/unit_tests/: main.cpp  test_agents.cpp.disabled  test_base_llm.cpp  test_base_retriever.cpp  test_bm25_retriever.cpp  test_bm25_simd_tfidf.cpp  test_chains.cpp  test_core_config.cpp  test_core_types.cpp  test_hybrid_retriever.cpp  test_inverted_index_retriever.cpp  test_logging.cpp  test_memory.cpp  test_memory_pool.cpp  test_metrics.cpp  test_openai_llm.cpp  test_prompt_templates.cpp  test_simd_ops.cpp  test_simple_vector_store.cpp  test_text_processor.cpp  test_thread_pool.cpp  test_vector_store.cpp
